syntax = "proto3";

//package resonate.api.user;

package user;

option go_package = "github.com/resonatecoop/user-api/proto/user";

message Empty {}

message RelatedUserGroup {
  string id = 1;
  string display_name = 2;
  bytes avatar = 3;
}

message RelatedTrackGroup {
  string id = 1; // required
  string title = 2; // required
  bytes cover = 3; // required
  string type = 4; // required
  string about = 5;
  bool private = 6;
  string display_artist = 7;
  int32 total_tracks = 8;
  RelatedUserGroup user_group = 9;
}

message User {
  string id = 1; // required
  string username = 2; // required
  string email = 3; // required
  string full_name = 5; // required
  string first_name = 6;
  string last_name = 7;
  bool member = 8;
  bool newsletter_notification = 10;
  repeated string followed_groups = 12;
  //repeated string favorite_tracks = 11;
  //bytes avatar = 9;
  //string display_name = 4; // required TODO remove
  //repeated RelatedUserGroup owner_of_groups = 13;
  //StreetAddress residence_address = 14;
}

message Tag {
  string id = 1;
  string type = 2;
  string name = 3;
}

message StreetAddress {
  string id = 1;
  map<string, string> data = 2;
  bool personal_data = 3;
}

message Query {
  string query = 1; // required
}

message SearchResults {
  repeated RelatedUserGroup people = 1;
  repeated RelatedUserGroup artists = 2;
  repeated RelatedUserGroup labels = 3;
  // repeated RelatedTrackGroup playlists = 4;
  // repeated RelatedTrackGroup albums = 5;
  // repeated SearchTrack tracks = 6;
}

